--- a/classifier.ipynb
+++ b/classifier.ipynb
@@ -19,9 +19,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/usr/local/lib/python3.5/dist-packages/h5py/__init__.py:36: FutureWarning: Conversion of the second argument of issubdtype from `float` to `np.floating` is deprecated. In future, it will be treated as `np.float64 == np.dtype(float).type`.\n",
+      "  from ._conv import register_converters as _register_converters\n"
+     ]
+    }
+   ],
    "source": [
     "import tensorflow as tf\n",
     "import pickle\n",
@@ -30,17 +39,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(308, 50, 50, 3)\n"
+     ]
+    }
+   ],
    "source": [
     "with open('dataset.npys', 'rb') as handle:\n",
-    "    train, train_labels, test, test_labels = pickle.load(handle)"
+    "    train, train_labels, test, test_labels = pickle.load(handle)\n",
+    "print(train.shape)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -62,9 +80,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 15,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "conv1 :: (?, 45, 45, 32)\n",
+      "pool1 :: (?, 22, 22, 32)\n",
+      "conv2 :: (?, 20, 20, 64)\n",
+      "pool2 :: (?, 18, 18, 64)\n",
+      "(?, 20736)\n",
+      "fc1   :: (?, 512)\n",
+      "logits :: (?, 2)\n"
+     ]
+    }
+   ],
    "source": [
     "with tf.name_scope('model') as scope:\n",
     "\n",
@@ -73,67 +105,68 @@
     "            inputs = x,\n",
     "            filters = 32,\n",
     "            kernel_size = [6, 6],\n",
-    "            padding = 'same',\n",
+    "            padding = 'valid',\n",
     "            activation = tf.nn.relu,\n",
     "        )\n",
+    "        print('conv1 ::', conv1.shape)\n",
     "        \n",
     "        pool1 = tf.layers.max_pooling2d(\n",
     "            inputs=conv1,\n",
     "            pool_size=[2,2],\n",
     "            strides=2\n",
     "        )\n",
+    "        print('pool1 ::', pool1.shape)\n",
     "        \n",
     "    with tf.name_scope('convpool2') as scope:\n",
     "        conv2 = tf.layers.conv2d(\n",
     "            inputs=pool1,\n",
     "            filters=64,\n",
     "            kernel_size=[3,3],\n",
-    "            padding='same',\n",
+    "            padding='valid',\n",
     "            activation=tf.nn.relu\n",
     "        )\n",
+    "        print('conv2 ::', conv2.shape)\n",
+    "        \n",
     "        pool2 = tf.layers.max_pooling2d(\n",
     "            inputs=conv2,\n",
     "            pool_size=[3,3],\n",
     "            strides=1\n",
     "        )\n",
+    "        print('pool2 ::', pool2.shape)\n",
     "        \n",
     "    with tf.name_scope('fc1') as scope:\n",
-    "        pool2_flat = tf.reshape(pool2, [-1, 23 * 23 * 64])\n",
-    "        dense = tf.layers.dense(inputs=pool2_flat, units=516, activation=tf.nn.relu)\n",
+    "        pool2_flat = tf.reshape(pool2, [-1, 18 * 18 * 64])\n",
+    "        print(pool2_flat.shape)\n",
+    "        dense = tf.layers.dense(inputs=pool2_flat, units=512, activation=tf.nn.relu)\n",
     "        dropout = tf.nn.dropout(dense, keep_prob)\n",
+    "        print('fc1   ::', dropout.shape)\n",
     "        \n",
     "    with tf.name_scope('logits') as scope:\n",
-    "        logits = tf.layers.dense(inputs=dropout, units=2)"
+    "        logits = tf.layers.dense(inputs=dropout, units=2)\n",
+    "        print('logits ::', logits.shape)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "WARNING:tensorflow:From <ipython-input-24-e889bca6b7ff>:3: softmax_cross_entropy_with_logits (from tensorflow.python.ops.nn_ops) is deprecated and will be removed in a future version.\n",
-      "Instructions for updating:\n",
-      "\n",
-      "Future major versions of TensorFlow will allow gradients to flow\n",
-      "into the labels input on backprop by default.\n",
-      "\n",
-      "See tf.nn.softmax_cross_entropy_with_logits_v2.\n",
-      "\n"
+      "(308, 2) (?, 2)\n"
      ]
     }
    ],
    "source": [
     "with tf.name_scope('train') as scope:\n",
     "    with tf.name_scope('loss') as scope:\n",
-    "        cross_entropy = tf.nn.softmax_cross_entropy_with_logits(labels=train_y, logits=logits)\n",
+    "        cross_entropy = tf.nn.softmax_cross_entropy_with_logits(labels=train_labels, logits=logits)\n",
     "    training_step = tf.train.AdamOptimizer(0.001).minimize(cross_entropy)\n",
     "\n",
     "with tf.name_scope('evaluation') as scope:\n",
-    "    correct_prediction = tf.equal(tf.argmax(logits,1), tf.argmax(train_y,1))\n",
+    "    correct_prediction = tf.equal(tf.argmax(logits,1), tf.argmax(labels,1))\n",
     "    accuracy = tf.reduce_mean(tf.cast(correct_prediction, tf.float32))\n",
     "\n",
     "# create a summarizer that summarizes loss and accuracy\n",
@@ -142,42 +175,78 @@
     "summary_op = tf.summary.merge_all()\n",
     "\n",
     "# create saver object\n",
-    "saver = tf.train.Saver()"
+    "saver = tf.train.Saver()\n",
+    "\n",
+    "print(train_labels.shape, logits.shape)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 43,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(308, 2)\n",
+      "mid train accuracy: 0.5 at step: 0\n",
+      "mid train accuracy: 0.5 at step: 2\n",
+      "mid train accuracy: 0.5 at step: 4\n",
+      "mid train accuracy: 0.75974023 at step: 6\n",
+      "mid train accuracy: 0.72077924 at step: 8\n",
+      "mid train accuracy: 0.762987 at step: 10\n",
+      "mid train accuracy: 0.83441556 at step: 12\n",
+      "mid train accuracy: 0.7922078 at step: 14\n",
+      "mid train accuracy: 0.8279221 at step: 16\n",
+      "mid train accuracy: 0.83116883 at step: 18\n"
+     ]
+    }
+   ],
    "source": [
     "with tf.Session() as sess:\n",
     "    # initialize variables\n",
     "    tf.global_variables_initializer().run()\n",
-    "\n",
+    "    print(logits.eval(session=sess, feed_dict={x:train, labels:train_labels, keep_prob:0.7}).shape)\n",
     "    # initialize summarizer filewriter\n",
     "    fw = tf.summary.FileWriter(\"./summary\", sess.graph)\n",
     "\n",
     "    # train the network\n",
-    "    for step in range(20000):\n",
+    "    for step in range(20):\n",
     "        \n",
     "        # this should be a batch instead\n",
+    "        sess.run(training_step, feed_dict={\n",
+    "                x: train,\n",
+    "                labels: train_labels,\n",
+    "                keep_prob:1.0\n",
+    "            })\n",
+    "        \n",
     "        if step%2 == 0:\n",
     "            acc = sess.run(accuracy, feed_dict={\n",
-    "                x: train, labels: train_labels, keep_prob:1})\n",
+    "                x: train,\n",
+    "                labels: train_labels,\n",
+    "                keep_prob:1.0\n",
+    "            })\n",
     "            print(\"mid train accuracy:\", acc, \"at step:\", step)\n",
-    "\n",
-    "        if step%100 == 0:\n",
-    "            # compute summary using test data every 100 steps\n",
-    "            summary = sess.run(summary_op, feed_dict={\n",
-    "                x: test, labels: test_labels, keep_prob:1})\n",
-    "\n",
+    "            \n",
+    "            \"\"\"summary = sess.run(summary_op, feed_dict={\n",
+    "                x: test,\n",
+    "                labels: test_labels,\n",
+    "                keep_prob: 1.0\n",
+    "            })\"\"\"  # my code is buggy here...\n",
     "            # add merged summaries to filewriter,\n",
     "            # so they are saved to disk\n",
-    "            fw.add_summary(summary, step)\n",
+    "            #fw.add_summary(summary, step)\n",
     "\n",
     "    # save trained model\n",
     "    saver.save(sess, \"./my.model\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Results to be improved!"
    ]
   }
  ],
@@ -197,7 +266,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.4"
+   "version": "3.5.2"
   }
  },
  "nbformat": 4,
