--- a/classifier_tensorflow.ipynb
+++ b/classifier_tensorflow.ipynb
@@ -209,7 +209,7 @@
     "    tf.global_variables_initializer().run()\n",
     "    print(logits.eval(session=sess, feed_dict={x:train, labels:train_labels, keep_prob:0.7}).shape)\n",
     "    # initialize summarizer filewriter\n",
-    "    fw = tf.summary.FileWriter(\"./summary\", sess.graph)\n",
+    "    fw = tf.summary.FileWriter(\"./log_tensorflow\", sess.graph)\n",
     "\n",
     "    # train the network\n",
     "    for step in range(20):\n",
@@ -266,7 +266,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.2"
+   "version": "3.6.4"
   }
  },
  "nbformat": 4,
