77% accuracy on small subset

--- a/classifier_keras.ipynb
+++ b/classifier_keras.ipynb
@@ -9,7 +9,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/home/burnie/.conda/envs/tf/lib/python3.6/site-packages/h5py/__init__.py:36: FutureWarning: Conversion of the second argument of issubdtype from `float` to `np.floating` is deprecated. In future, it will be treated as `np.float64 == np.dtype(float).type`.\n",
+      "/home/bgalvao/miniconda3/envs/tf/lib/python3.6/site-packages/h5py/__init__.py:36: FutureWarning: Conversion of the second argument of issubdtype from `float` to `np.floating` is deprecated. In future, it will be treated as `np.float64 == np.dtype(float).type`.\n",
       "  from ._conv import register_converters as _register_converters\n",
       "Using TensorFlow backend.\n"
      ]
@@ -55,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -94,7 +94,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -127,39 +127,69 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch 1/5\n",
-      "308/308 [==============================] - 21s 68ms/step - loss: 0.6961 - acc: 0.5260\n",
-      "Epoch 2/5\n",
-      "308/308 [==============================] - 18s 57ms/step - loss: 0.6847 - acc: 0.5000\n",
-      "Epoch 3/5\n",
-      "308/308 [==============================] - 19s 60ms/step - loss: 0.6779 - acc: 0.5032\n",
-      "Epoch 4/5\n",
-      "308/308 [==============================] - 18s 59ms/step - loss: 0.6727 - acc: 0.5227\n",
-      "Epoch 5/5\n",
-      "308/308 [==============================] - 18s 59ms/step - loss: 0.6621 - acc: 0.6364\n"
+      "Epoch 1/20\n",
+      "308/308 [==============================] - 8s 24ms/step - loss: 0.7058 - acc: 0.4740\n",
+      "Epoch 2/20\n",
+      "308/308 [==============================] - 8s 27ms/step - loss: 0.6511 - acc: 0.5487\n",
+      "Epoch 3/20\n",
+      "308/308 [==============================] - 8s 27ms/step - loss: 0.6405 - acc: 0.6299\n",
+      "Epoch 4/20\n",
+      "308/308 [==============================] - 8s 27ms/step - loss: 0.6441 - acc: 0.6494\n",
+      "Epoch 5/20\n",
+      "308/308 [==============================] - 9s 28ms/step - loss: 0.6497 - acc: 0.6234\n",
+      "Epoch 6/20\n",
+      "308/308 [==============================] - 10s 32ms/step - loss: 0.6670 - acc: 0.5942\n",
+      "Epoch 7/20\n",
+      "308/308 [==============================] - 9s 30ms/step - loss: 0.6348 - acc: 0.6753\n",
+      "Epoch 8/20\n",
+      "308/308 [==============================] - 9s 30ms/step - loss: 0.6272 - acc: 0.6818\n",
+      "Epoch 9/20\n",
+      "308/308 [==============================] - 10s 32ms/step - loss: 0.5752 - acc: 0.7338\n",
+      "Epoch 10/20\n",
+      "308/308 [==============================] - 9s 30ms/step - loss: 0.6328 - acc: 0.6494\n",
+      "Epoch 11/20\n",
+      "308/308 [==============================] - 10s 33ms/step - loss: 0.5310 - acc: 0.7792\n",
+      "Epoch 12/20\n",
+      "308/308 [==============================] - 9s 30ms/step - loss: 0.5524 - acc: 0.7305\n",
+      "Epoch 13/20\n",
+      "308/308 [==============================] - 10s 31ms/step - loss: 0.6330 - acc: 0.6818\n",
+      "Epoch 14/20\n",
+      "308/308 [==============================] - 10s 32ms/step - loss: 0.5720 - acc: 0.7727\n",
+      "Epoch 15/20\n",
+      "308/308 [==============================] - 9s 30ms/step - loss: 0.5969 - acc: 0.6786\n",
+      "Epoch 16/20\n",
+      "308/308 [==============================] - 10s 32ms/step - loss: 0.5431 - acc: 0.7695\n",
+      "Epoch 17/20\n",
+      "308/308 [==============================] - 9s 31ms/step - loss: 0.5822 - acc: 0.7078\n",
+      "Epoch 18/20\n",
+      "308/308 [==============================] - 9s 30ms/step - loss: 0.5718 - acc: 0.7695\n",
+      "Epoch 19/20\n",
+      "308/308 [==============================] - 9s 30ms/step - loss: 0.6176 - acc: 0.6526\n",
+      "Epoch 20/20\n",
+      "308/308 [==============================] - 9s 30ms/step - loss: 0.5392 - acc: 0.7565\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "<keras.callbacks.History at 0x7fa3c69a8e10>"
+       "<keras.callbacks.History at 0x7fef64329908>"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# hyper and meta params\n",
-    "iterations = 5\n",
+    "iterations = 20\n",
     "batch = 32\n",
     "tensorboard_callback = callbacks.TensorBoard(\n",
     "    log_dir='./log_keras',\n",
@@ -179,17 +209,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "166/166 [==============================] - 4s 27ms/step\n",
+      "166/166 [==============================] - 2s 11ms/step\n",
       "On the test set\n",
-      "loss :: 0.66\n",
-      "accu :: 0.5\n"
+      "loss :: 0.51\n",
+      "accu :: 0.77\n"
      ]
     }
    ],
@@ -204,16 +234,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Not looking that great (yet), but to visualize it run the following cell and open `localhost:6006`"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "!tensorboard --logdir log_keras"
+    "This run got 77% accuracy on the test set! Not bad, but definitely improvable. :) Keep in mind however, this was trained on a cpu and a very small subset of the data, so it's not much to celebrate haha.\n",
+    "\n",
+    "Anyways, if you want to check out details of this run, run the command `tensorboard --logdir log_keras` and open `localhost:6006` on the browser."
    ]
   }
  ],
