--- a/classifier_tensorflow.ipynb
+++ b/classifier_tensorflow.ipynb
@@ -26,7 +26,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/usr/local/lib/python3.5/dist-packages/h5py/__init__.py:36: FutureWarning: Conversion of the second argument of issubdtype from `float` to `np.floating` is deprecated. In future, it will be treated as `np.float64 == np.dtype(float).type`.\n",
+      "/home/bgalvao/miniconda3/envs/tf/lib/python3.6/site-packages/h5py/__init__.py:36: FutureWarning: Conversion of the second argument of issubdtype from `float` to `np.floating` is deprecated. In future, it will be treated as `np.float64 == np.dtype(float).type`.\n",
       "  from ._conv import register_converters as _register_converters\n"
      ]
     }
@@ -39,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -57,18 +57,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 12,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "with tf.name_scope('input') as scope:\n",
-    "    x = tf.placeholder(tf.float32, [None, 50, 50, 3], name='input')\n",
-    "    labels = tf.placeholder(tf.float32, [None, 2], name='label')\n",
-    "    keep_prob = tf.placeholder(tf.float32, name='keep_prob')"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -80,7 +68,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -98,6 +86,12 @@
     }
    ],
    "source": [
+    "tf.reset_default_graph()\n",
+    "with tf.name_scope('input') as scope:\n",
+    "    x = tf.placeholder(tf.float32, [None, 50, 50, 3], name='input')\n",
+    "    labels = tf.placeholder(tf.float32, [None, 2], name='label')\n",
+    "    keep_prob = tf.placeholder(tf.float32, name='keep_prob')\n",
+    "\n",
     "with tf.name_scope('model') as scope:\n",
     "\n",
     "    with tf.name_scope('convpool1') as scope:\n",
@@ -143,26 +137,11 @@
     "        \n",
     "    with tf.name_scope('logits') as scope:\n",
     "        logits = tf.layers.dense(inputs=dropout, units=2)\n",
-    "        print('logits ::', logits.shape)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 37,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "(308, 2) (?, 2)\n"
-     ]
-    }
-   ],
-   "source": [
+    "        print('logits ::', logits.shape)\n",
+    "        \n",
     "with tf.name_scope('train') as scope:\n",
     "    with tf.name_scope('loss') as scope:\n",
-    "        cross_entropy = tf.nn.softmax_cross_entropy_with_logits(labels=train_labels, logits=logits)\n",
+    "        cross_entropy = tf.nn.softmax_cross_entropy_with_logits(labels=labels, logits=logits)\n",
     "    training_step = tf.train.AdamOptimizer(0.001).minimize(cross_entropy)\n",
     "\n",
     "with tf.name_scope('evaluation') as scope:\n",
@@ -175,68 +154,160 @@
     "summary_op = tf.summary.merge_all()\n",
     "\n",
     "# create saver object\n",
-    "saver = tf.train.Saver()\n",
-    "\n",
-    "print(train_labels.shape, logits.shape)"
+    "saver = tf.train.Saver()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(308, 2)\n",
-      "mid train accuracy: 0.5 at step: 0\n",
-      "mid train accuracy: 0.5 at step: 2\n",
-      "mid train accuracy: 0.5 at step: 4\n",
-      "mid train accuracy: 0.75974023 at step: 6\n",
-      "mid train accuracy: 0.72077924 at step: 8\n",
-      "mid train accuracy: 0.762987 at step: 10\n",
-      "mid train accuracy: 0.83441556 at step: 12\n",
-      "mid train accuracy: 0.7922078 at step: 14\n",
-      "mid train accuracy: 0.8279221 at step: 16\n",
-      "mid train accuracy: 0.83116883 at step: 18\n"
+      "@step: 0 train_accuracy: 0.5 test_accuracy: 0.5\n",
+      "@step: 2 train_accuracy: 0.5 test_accuracy: 0.5\n",
+      "@step: 4 train_accuracy: 0.5 test_accuracy: 0.5\n",
+      "@step: 6 train_accuracy: 0.5 test_accuracy: 0.5\n",
+      "@step: 8 train_accuracy: 0.5 test_accuracy: 0.5\n",
+      "@step: 10 train_accuracy: 0.6136364 test_accuracy: 0.57831323\n",
+      "@step: 12 train_accuracy: 0.7532467 test_accuracy: 0.73493975\n",
+      "@step: 14 train_accuracy: 0.8149351 test_accuracy: 0.8072289\n",
+      "@step: 16 train_accuracy: 0.8214286 test_accuracy: 0.78313255\n",
+      "@step: 18 train_accuracy: 0.8084416 test_accuracy: 0.7590361\n",
+      "@step: 20 train_accuracy: 0.8279221 test_accuracy: 0.8313253\n",
+      "@step: 22 train_accuracy: 0.8084416 test_accuracy: 0.7710843\n",
+      "@step: 24 train_accuracy: 0.85064936 test_accuracy: 0.8313253\n",
+      "@step: 26 train_accuracy: 0.8474026 test_accuracy: 0.8192771\n",
+      "@step: 28 train_accuracy: 0.8474026 test_accuracy: 0.8072289\n",
+      "@step: 30 train_accuracy: 0.8603896 test_accuracy: 0.82530123\n",
+      "@step: 32 train_accuracy: 0.8668831 test_accuracy: 0.813253\n",
+      "@step: 34 train_accuracy: 0.8668831 test_accuracy: 0.8373494\n",
+      "@step: 36 train_accuracy: 0.8766234 test_accuracy: 0.7891566\n",
+      "@step: 38 train_accuracy: 0.8116883 test_accuracy: 0.7409639\n",
+      "@step: 40 train_accuracy: 0.8214286 test_accuracy: 0.8072289\n",
+      "@step: 42 train_accuracy: 0.8668831 test_accuracy: 0.8072289\n",
+      "@step: 44 train_accuracy: 0.8538961 test_accuracy: 0.82530123\n",
+      "@step: 46 train_accuracy: 0.85064936 test_accuracy: 0.813253\n",
+      "@step: 48 train_accuracy: 0.85714287 test_accuracy: 0.8192771\n",
+      "@step: 50 train_accuracy: 0.8798701 test_accuracy: 0.813253\n",
+      "@step: 52 train_accuracy: 0.8766234 test_accuracy: 0.8373494\n",
+      "@step: 54 train_accuracy: 0.90584415 test_accuracy: 0.8192771\n",
+      "@step: 56 train_accuracy: 0.8798701 test_accuracy: 0.8373494\n",
+      "@step: 58 train_accuracy: 0.9220779 test_accuracy: 0.85542166\n",
+      "@step: 60 train_accuracy: 0.9285714 test_accuracy: 0.8614458\n",
+      "@step: 62 train_accuracy: 0.91233766 test_accuracy: 0.85542166\n",
+      "@step: 64 train_accuracy: 0.9318182 test_accuracy: 0.85542166\n",
+      "@step: 66 train_accuracy: 0.9318182 test_accuracy: 0.8614458\n",
+      "@step: 68 train_accuracy: 0.9220779 test_accuracy: 0.8795181\n",
+      "@step: 70 train_accuracy: 0.9350649 test_accuracy: 0.8795181\n",
+      "@step: 72 train_accuracy: 0.9415584 test_accuracy: 0.85542166\n",
+      "@step: 74 train_accuracy: 0.9415584 test_accuracy: 0.85542166\n",
+      "@step: 76 train_accuracy: 0.96753246 test_accuracy: 0.8795181\n",
+      "@step: 78 train_accuracy: 0.9448052 test_accuracy: 0.8614458\n",
+      "@step: 80 train_accuracy: 0.9577922 test_accuracy: 0.87349397\n",
+      "@step: 82 train_accuracy: 0.97077924 test_accuracy: 0.87349397\n",
+      "@step: 84 train_accuracy: 0.97727275 test_accuracy: 0.8614458\n",
+      "@step: 86 train_accuracy: 0.98376626 test_accuracy: 0.8614458\n",
+      "@step: 88 train_accuracy: 0.98376626 test_accuracy: 0.87349397\n",
+      "@step: 90 train_accuracy: 0.98376626 test_accuracy: 0.8674699\n",
+      "@step: 92 train_accuracy: 0.987013 test_accuracy: 0.8795181\n",
+      "@step: 94 train_accuracy: 0.987013 test_accuracy: 0.87349397\n",
+      "@step: 96 train_accuracy: 0.99025977 test_accuracy: 0.8614458\n",
+      "@step: 98 train_accuracy: 0.987013 test_accuracy: 0.8493976\n",
+      "@step: 100 train_accuracy: 0.99025977 test_accuracy: 0.85542166\n",
+      "@step: 102 train_accuracy: 0.97727275 test_accuracy: 0.87349397\n",
+      "@step: 104 train_accuracy: 0.97727275 test_accuracy: 0.85542166\n",
+      "@step: 106 train_accuracy: 0.9967533 test_accuracy: 0.85542166\n",
+      "@step: 108 train_accuracy: 0.99025977 test_accuracy: 0.8795181\n",
+      "@step: 110 train_accuracy: 0.98376626 test_accuracy: 0.8674699\n",
+      "@step: 112 train_accuracy: 0.9967533 test_accuracy: 0.85542166\n",
+      "@step: 114 train_accuracy: 1.0 test_accuracy: 0.85542166\n",
+      "@step: 116 train_accuracy: 0.9935065 test_accuracy: 0.88554215\n",
+      "@step: 118 train_accuracy: 1.0 test_accuracy: 0.87349397\n",
+      "@step: 120 train_accuracy: 1.0 test_accuracy: 0.8674699\n",
+      "@step: 122 train_accuracy: 1.0 test_accuracy: 0.87349397\n",
+      "@step: 124 train_accuracy: 1.0 test_accuracy: 0.8674699\n",
+      "@step: 126 train_accuracy: 1.0 test_accuracy: 0.8795181\n",
+      "@step: 128 train_accuracy: 1.0 test_accuracy: 0.87349397\n",
+      "@step: 130 train_accuracy: 1.0 test_accuracy: 0.8674699\n",
+      "@step: 132 train_accuracy: 1.0 test_accuracy: 0.87349397\n",
+      "@step: 134 train_accuracy: 1.0 test_accuracy: 0.87349397\n",
+      "@step: 136 train_accuracy: 1.0 test_accuracy: 0.87349397\n",
+      "@step: 138 train_accuracy: 1.0 test_accuracy: 0.87349397\n",
+      "@step: 140 train_accuracy: 1.0 test_accuracy: 0.8795181\n",
+      "@step: 142 train_accuracy: 1.0 test_accuracy: 0.8614458\n",
+      "@step: 144 train_accuracy: 1.0 test_accuracy: 0.8614458\n",
+      "@step: 146 train_accuracy: 1.0 test_accuracy: 0.8795181\n",
+      "@step: 148 train_accuracy: 1.0 test_accuracy: 0.87349397\n",
+      "@step: 150 train_accuracy: 1.0 test_accuracy: 0.8614458\n",
+      "@step: 152 train_accuracy: 1.0 test_accuracy: 0.8614458\n",
+      "@step: 154 train_accuracy: 1.0 test_accuracy: 0.87349397\n",
+      "@step: 156 train_accuracy: 1.0 test_accuracy: 0.8614458\n",
+      "@step: 158 train_accuracy: 1.0 test_accuracy: 0.8674699\n",
+      "@step: 160 train_accuracy: 1.0 test_accuracy: 0.8674699\n",
+      "@step: 162 train_accuracy: 1.0 test_accuracy: 0.87349397\n",
+      "@step: 164 train_accuracy: 1.0 test_accuracy: 0.8614458\n",
+      "@step: 166 train_accuracy: 1.0 test_accuracy: 0.8674699\n",
+      "@step: 168 train_accuracy: 1.0 test_accuracy: 0.8674699\n",
+      "@step: 170 train_accuracy: 1.0 test_accuracy: 0.8614458\n",
+      "@step: 172 train_accuracy: 1.0 test_accuracy: 0.8674699\n",
+      "@step: 174 train_accuracy: 1.0 test_accuracy: 0.8614458\n",
+      "@step: 176 train_accuracy: 1.0 test_accuracy: 0.8674699\n",
+      "@step: 178 train_accuracy: 1.0 test_accuracy: 0.8674699\n",
+      "@step: 180 train_accuracy: 1.0 test_accuracy: 0.8614458\n",
+      "@step: 182 train_accuracy: 1.0 test_accuracy: 0.87349397\n",
+      "@step: 184 train_accuracy: 1.0 test_accuracy: 0.8614458\n",
+      "@step: 186 train_accuracy: 1.0 test_accuracy: 0.8674699\n",
+      "@step: 188 train_accuracy: 1.0 test_accuracy: 0.8674699\n",
+      "@step: 190 train_accuracy: 1.0 test_accuracy: 0.8614458\n",
+      "@step: 192 train_accuracy: 1.0 test_accuracy: 0.8614458\n",
+      "@step: 194 train_accuracy: 1.0 test_accuracy: 0.8614458\n",
+      "@step: 196 train_accuracy: 1.0 test_accuracy: 0.8614458\n",
+      "@step: 198 train_accuracy: 1.0 test_accuracy: 0.85542166\n"
      ]
     }
    ],
    "source": [
     "with tf.Session() as sess:\n",
+    "    \n",
     "    # initialize variables\n",
     "    tf.global_variables_initializer().run()\n",
-    "    print(logits.eval(session=sess, feed_dict={x:train, labels:train_labels, keep_prob:0.7}).shape)\n",
+    "    \n",
     "    # initialize summarizer filewriter\n",
     "    fw = tf.summary.FileWriter(\"./log_tensorflow\", sess.graph)\n",
     "\n",
     "    # train the network\n",
-    "    for step in range(20):\n",
-    "        \n",
+    "    for step in range(200):\n",
+    "\n",
     "        # this should be a batch instead\n",
     "        sess.run(training_step, feed_dict={\n",
     "                x: train,\n",
     "                labels: train_labels,\n",
     "                keep_prob:1.0\n",
     "            })\n",
-    "        \n",
     "        if step%2 == 0:\n",
     "            acc = sess.run(accuracy, feed_dict={\n",
     "                x: train,\n",
     "                labels: train_labels,\n",
     "                keep_prob:1.0\n",
     "            })\n",
-    "            print(\"mid train accuracy:\", acc, \"at step:\", step)\n",
     "            \n",
-    "            \"\"\"summary = sess.run(summary_op, feed_dict={\n",
+    "            acct = sess.run(accuracy, feed_dict={\n",
+    "                x: test,\n",
+    "                labels: test_labels,\n",
+    "                keep_prob:1.0\n",
+    "            })\n",
+    "            print(\"@step:\", step, \"train_accuracy:\", acc, 'test_accuracy:', acct)\n",
+    "\n",
+    "            summary = sess.run(summary_op, feed_dict={\n",
     "                x: test,\n",
     "                labels: test_labels,\n",
     "                keep_prob: 1.0\n",
-    "            })\"\"\"  # my code is buggy here...\n",
-    "            # add merged summaries to filewriter,\n",
-    "            # so they are saved to disk\n",
-    "            #fw.add_summary(summary, step)\n",
+    "            })\n",
+    "\n",
+    "            fw.add_summary(summary, step)\n",
     "\n",
     "    # save trained model\n",
     "    saver.save(sess, \"./my.model\")"
