added input normalization

--- a/classifier_keras.ipynb
+++ b/classifier_keras.ipynb
@@ -47,6 +47,23 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "normalize = False\n",
+    "if normalize:\n",
+    "    train[:,:,:,0] = (train[:,:,:,0]*255 - 128) / 128\n",
+    "    train[:,:,:,1] = (train[:,:,:,1]*255 - 128) / 128\n",
+    "    train[:,:,:,2] = (train[:,:,:,2]*255 - 128) / 128\n",
+    "\n",
+    "    test[:,:,:,0] = (test[:,:,:,0]*255 - 128) / 128\n",
+    "    test[:,:,:,1] = (test[:,:,:,1]*255 - 128) / 128\n",
+    "    test[:,:,:,2] = (test[:,:,:,2]*255 - 128) / 128"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
