added random normal weight initializer to keras

--- a/classifier_keras.ipynb
+++ b/classifier_keras.ipynb
@@ -19,7 +19,9 @@
     "from keras.models import Sequential\n",
     "from keras.layers import Conv2D, MaxPooling2D, Dense, Activation, Flatten\n",
     "from keras import callbacks\n",
-    "from keras import backend, optimizers"
+    "from keras import backend, optimizers\n",
+    "from keras.initializers import random_normal  # https://keras.io/initializers/#randomnormal\n",
+    "# random_normal defaults to mean 0.0 and dtdev 0.05"
    ]
   },
   {
@@ -52,8 +54,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "normalize = False\n",
-    "if normalize:\n",
+    "normalize_input = False\n",
+    "if normalize_input:\n",
     "    train[:,:,:,0] = (train[:,:,:,0]*255 - 128) / 128\n",
     "    train[:,:,:,1] = (train[:,:,:,1]*255 - 128) / 128\n",
     "    train[:,:,:,2] = (train[:,:,:,2]*255 - 128) / 128\n",
@@ -89,6 +91,28 @@
     "model.add(Dense(32))\n",
     "model.add(Activation('relu'))\n",
     "model.add(Dense(2))\n",
+    "model.add(Activation('softmax'))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# define model\n",
+    "backend.clear_session()  # resets graph, we don't need multiples of the same\n",
+    "model = Sequential()\n",
+    "model.add(Conv2D(32, kernel_size=(9,9), input_shape=(50, 50, 3), kernel_initializer=random_normal))\n",
+    "model.add(MaxPooling2D(pool_size=(3,3), strides=(1,1)))\n",
+    "model.add(Activation('relu'))\n",
+    "model.add(Conv2D(64, kernel_size=(4,4), kernel_initializer=random_normal))\n",
+    "model.add(MaxPooling2D(pool_size=(2,2), strides=(1,1)))\n",
+    "model.add(Activation('relu'))\n",
+    "model.add(Flatten())\n",
+    "model.add(Dense(32, kernel_initializer=random_normal, bias_initializer=random_normal))\n",
+    "model.add(Activation('relu'))\n",
+    "model.add(Dense(2, kernel_initializer=random_normal, bias_initializer=random_normal))\n",
     "model.add(Activation('softmax'))"
    ]
   },
